<resources>
    <string name="app_name">Reservalia</string>

    <!-- Strings related to login -->
    <string name="email">Email</string>
    <string name="password">"Contraseña"</string>
    <string name="action_sign_in">Conectar</string>
    <string name="action_sign_in_short">Conectar</string>
    <string name="action_sign_out">Desconectar</string>
    <string name="action_create_user">Nuevo usuario</string>
    <string name="welcome">"Bienvenid@ !"</string>
    <string name="invalid_username">Usuario no válido</string>
    <string name="invalid_password">Contraseña no válida</string>
    <string name="login_failed">"Fallo al iniciar la sesión"</string>

    <!--    FORMULARIO REGISTRO   -->
    <string name="full_name">"Nombre completo"</string>
    <string name="phone">"Teléfono"</string>
    <string name="register">"Crear usuario"</string>

    <!--    ROLES    -->
    <string name="usuario">"USR"</string>
    <string name="ADMIN">"ADM"</string>
    <string name="title_activity_maps">MapsActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="categorias_item_menu">
        <item>Entrantes</item>
        <item>Ensaladas</item>
        <item>Bocadillos</item>
        <item>Pizzas</item>
        <item>Carnes</item>
        <item>Pescados</item>
        <item>Platos combinados</item>
        <item>Postres</item>
        <item>Cafés</item>
        <item>Desayunos</item>
        <item>Refrescos</item>
        <item>Vinos</item>
    </string-array>

</resources>